correção de sinal de multiplicação

--- a/src/app/calculadora/components/calculadora.component.html
+++ b/src/app/calculadora/components/calculadora.component.html
@@ -45,7 +45,7 @@
               </button>
             </div>
             <div class="col-xs-3">
-              <button (click)="definirOperacao('*')" type="button" class="btn btn-warning kz-btn" id="btnMIltiplicacao">*
+              <button (click)="definirOperacao('x')" type="button" class="btn btn-warning kz-btn" id="btnMIltiplicacao">*
               </button>
             </div>
           </div>
